--- a/Austins_Blog/Views/Home/Index.cshtml
+++ b/Austins_Blog/Views/Home/Index.cshtml
@@ -1,31 +1,52 @@
-﻿@{
+﻿@using Austins_Blog.Models
+@model IEnumerable<BlogPost>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div class="main-wrapper">
+    <section class="cta-section theme-bg-light py-5">
+        <div class="container text-center">
+            <h2 class="heading">DevBlog - A Blog Template Made For Developers</h2>
+            <div class="intro">Welcome to my blog. Subscribe and get my latest blog post in your inbox.</div>
+            <form class="signup-form form-inline justify-content-center pt-3">
+                <div class="form-group">
+                    <label class="sr-only" for="semail">Your email</label>
+                    <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Enter email">
+                </div>
+                <button type="submit" class="btn btn-primary">Subscribe</button>
+            </form>
+        </div><!--//container-->
+    </section>
+    <section class="blog-list px-3 py-5 p-md-5">
+        <div class="container">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+            <div class="item mb-5">
+                @foreach (var post in Model)
+                {
+                    <div class="media">
+                        <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="~/images/blog/blog-post-thumb-1.jpg" alt="image">
+                        <div class="media-body">
+                            <h3 class="title mb-1"><a href="@Url.Action("Details","BlogPosts", new { slug = @post.Slug })">@post.Title</a></h3>
+                            <div class="meta mb-1"><span class="date">Posted by Austin Pearson on @post.Created </span><span class="time">5 min read</span><span class="comment"><a href="#">8 comments</a></span></div>
+                            <div class="intro">@post.Abstract</div>
+                            <a class="more-link" href="blog-post.html">Read more &rarr;</a>
+                        </div><!--//media-body-->
+                    </div><!--//media-->
+                }
+            </div><!--//item-->
+           
+
+
+            <nav class="blog-nav nav nav-justified my-5">
+                <a class="nav-link-prev nav-item nav-link d-none rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
+                <a class="nav-link-next nav-item nav-link rounded" href="blog-list.html">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
+            </nav>
+
+        </div>
+    </section>
+
+   
+
+</div><!--//main-wrapper-->
