--- a/Austins_Blog/Views/BlogPosts/Details.cshtml
+++ b/Austins_Blog/Views/BlogPosts/Details.cshtml
@@ -1,83 +1,93 @@
-﻿@model Austins_Blog.Models.BlogPost
+﻿@using Austins_Blog.Models
+@model BlogPost
 
 @{
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div class="main-wrapper">
 
-<div>
-    <h4>BlogPost</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+    <article class="blog-post px-3 py-5 p-md-5">
+        <div class="container">
+            <header class="blog-post-header">
+                <h2 class="title mb-2">@Model.Title</h2>
+                <div class="meta mb-3"><span class="date">Posted by Austin Pearson on @Model.Created</span><span class="time">5 min read</span><span class="comment"><a href="#">4 comments</a></span></div>
+            </header>
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
+            <div class="blog-post-body">
+                <figure class="blog-banner">
+                      
+                        <img class="img-responsive" src="@Model.MediaUrl" width="790" height="395" alt="" />
+                             
+                  </figure>
+                @Html.Raw(Model.Body)
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Abstract)
-        </dt>
+                
 
-        <dd>
-            @Html.DisplayFor(model => model.Abstract)
-        </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Slug)
-        </dt>
+            <nav class="blog-nav nav nav-justified my-5">
+                <a class="nav-link-prev nav-item nav-link rounded-left" href="index.html">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
+                <a class="nav-link-next nav-item nav-link rounded-right" href="blog-list.html">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
+            </nav>
 
-        <dd>
-            @Html.DisplayFor(model => model.Slug)
-        </dd>
+            <div class="blog-comments-section">
+                <div id="disqus_thread"></div>
+                <script>
+                    /**
+                     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT
+                     *  THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR
+                     *  PLATFORM OR CMS.
+                     *
+                     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT:
+                     *  https://disqus.com/admin/universalcode/#configuration-variables
+                     */
+                    /*
+                    var disqus_config = function () {
+                        // Replace PAGE_URL with your page's canonical URL variable
+                        this.page.url = PAGE_URL;
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Body)
-        </dt>
+                        // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                        this.page.identifier = PAGE_IDENTIFIER;
+                    };
+                    */
 
-        <dd>
-            @*Html.DisplayFor(model => model.Body)*@
-            @Html.Raw(Model.Body)
-        </dd>
+                    (function () {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
+                        var d = document, s = d.createElement('script');
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MediaUrl)
-        </dt>
+                        // IMPORTANT: Replace 3wmthemes with your forum shortname!
+                        s.src = 'https://3wmthemes.disqus.com/embed.js';
 
-        <dd>
-            @Html.DisplayFor(model => model.MediaUrl)
-        </dd>
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+                <noscript>
+                    Please enable JavaScript to view the
+                    <a href="https://disqus.com/?ref_noscript" rel="nofollow">
+                        comments powered by Disqus.
+                    </a>
+                </noscript>
+            </div><!--//blog-comments-section-->
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Published)
-        </dt>
+        </div><!--//container-->
+    </article>
 
-        <dd>
-            @Html.DisplayFor(model => model.Published)
-        </dd>
+    <section class="promo-section theme-bg-light py-5 text-center">
+        <div class="container">
+            <h2 class="title">Promo Section Heading</h2>
+            <p>You can use this section to promote your side projects etc. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
+            <figure class="promo-figure">
+                <a href="https://made4dev.com" target="_blank"><img class="img-fluid" src="assets/images/promo-banner.jpg" alt="image"></a>
+            </figure>
+        </div><!--//container-->
+    </section><!--//promo-section-->
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
+    <footer class="footer text-center py-2 theme-bg-dark">
 
-        <dd>
-            @Html.DisplayFor(model => model.Created)
-        </dd>
+        <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
+        <small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Updated)
-        </dt>
+    </footer>
 
-        <dd>
-            @Html.DisplayFor(model => model.Updated)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+</div><!--//main-wrapper-->
