--- a/Austins_Blog/Views/Home/Index.cshtml
+++ b/Austins_Blog/Views/Home/Index.cshtml
@@ -1,54 +1,38 @@
 ﻿@using Austins_Blog.Models
-@model IEnumerable<BlogPost>
+@using PagedList.Mvc
+@using PagedList
+@model IPagedList<BlogPost>
 
 @{
     ViewBag.Title = "Home Page";
 }
 
 
-    <section class="cta-section theme-bg-light py-5">
-        <div class="container text-center">
-            <h2 class="heading">DevBlog - A Blog Template Made For Developers</h2>
-            <div class="intro">Welcome to my blog. Subscribe and get my latest blog post in your inbox.</div>
-            <form class="signup-form form-inline justify-content-center pt-3">
-                <div class="form-group">
-                    <label class="sr-only" for="semail">Your email</label>
-                    <input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Enter email">
-                </div>
-                <button type="submit" class="btn btn-primary">Subscribe</button>
-            </form>
-        </div><!--//container-->
-    </section>
+
     <section class="blog-list px-3 py-5 p-md-5">
         <div class="container">
             <div class="item mb-5">
                 @foreach (var post in Model)
                 {
-                <a href="@Url.Action("Details","BlogPosts", new { slug = @post.Slug })">
-                    <div class="media">
-                        <img class="img-responsive" src="@post.MediaUrl" width="110" height="110" alt="" />
-                        <div class="media-body">
-                            <h3 class="title mb-1">
-                                @post.Title
-                            </h3>
-                            <div class="meta mb-1"><span class="date">Posted by Austin Pearson on @post.Created </span><span class="time">5 min read</span><span class="comment"><a href="#">8 comments</a></span></div>
-                            <div class="intro">@post.Abstract</div>
+                    <a href="@Url.Action("Details","BlogPosts", new { slug = @post.Slug })">
+                        <div class="media">
+                            <img class="img-responsive" src="@post.MediaUrl" width="110" height="110" alt="" />
+                            <div class="media-body">
+                                <h3 class="title mb-1">
+                                    @post.Title
+                                </h3>
+                                <div class="meta mb-1"><span class="date">Posted by Austin Pearson on @post.Created </span><span class="time">5 min read</span><span class="comment"><a href="#">8 comments</a></span></div>
+                                <div class="intro">@post.Abstract</div>
 
-                            @*<a class="more-link" href="blog-post.html">Read more &rarr;</a>*@
-                        </div><!--//media-body-->
-                    </div><!--//media-->
-                    <br />
-                </a>
+                                @*<a class="more-link" href="blog-post.html">Read more &rarr;</a>*@
+                            </div><!--//media-body-->
+                        </div><!--//media-->
+                        <br />
+                    </a>
                 }
             </div><!--//item-->
-            
-           
-
-
-            <nav class="blog-nav nav nav-justified my-5">
-                <a class="nav-link-prev nav-item nav-link d-none rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
-                <a class="nav-link-next nav-item nav-link rounded" href="blog-list.html">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
-            </nav>
+            Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of 
+            @Model.PageCount  @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
 
         </div>
     </section>
