--- a/Austins_Blog/Views/Home/About.cshtml
+++ b/Austins_Blog/Views/Home/About.cshtml
@@ -1,7 +1,29 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<div class="main-wrapper">
+
+    <article class="about-section py-5">
+        <div class="container">
+            <h2 class="title mb-3">About Me</h2>
+
+            <p>My passion for technology started with my first computer, the second I got it I took it apart to see how exactly it works. In high school I took a web development class learning Html and CSS, I instantly developed a love for programming. Off and on for the next for years, I learned little by little. Up until I got accepted into coder foundry where now I am studying and learning code making my dream of working in technology come true. </p>
+            <figure><img class="img-fluid" src="~/images/about-me.jpg" alt="image"></figure>
+            <h5 class="mt-5">About The Blog</h5>
+            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus.</p>
+            <h5 class="mt-5">My Skills and Experiences</h5>
+            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
+            <h5 class="mt-5">Side Projects</h5>
+            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
+
+            <figure><a href="https://made4dev.com"><img class="img-fluid" src="~/images/promo-banner.jpg" alt="image"></a></figure>
+        </div>
+    </article><!--//about-section-->
+
+
+
+
+
+</div><!--//main-wrapper-->
