--- a/Austins_Blog/Views/BlogPosts/Details.cshtml
+++ b/Austins_Blog/Views/BlogPosts/Details.cshtml
@@ -5,27 +5,73 @@
     ViewBag.Title = "Details";
 }
 
-<div class="main-wrapper">
+    <div class="main-wrapper">
 
-    <article class="blog-post px-3 py-5 p-md-5">
-        <div class="container">
-            <header class="blog-post-header">
-                <h2 class="title mb-2">@Model.Title</h2>
-                <div class="meta mb-3"><span class="date">Posted by Austin Pearson on @Model.Created</span>><span class="comment"><a href="#">4 comments</a></span></div>
-            </header>
+        <article class="blog-post px-3 py-5 p-md-5">
+            <div class="container">
+                <header class="blog-post-header">
+                    <h2 class="title mb-2">@Model.Title</h2>
+                    <div class="meta mb-3"><span class="date">Posted by Austin Pearson on @Model.Created</span>><span class="comment"><a href="#">4 comments</a></span></div>
+                </header>
 
-            <div class="blog-post-body">
-                <figure class="blog-banner">
+                <div class="blog-post-body">
+                    <figure class="blog-banner">
 
-                    <img class="img-responsive" src="@Model.MediaUrl" width="790" height="395" alt="" />
+                        <img class="img-responsive" src="@Model.MediaUrl" width="790" height="395" alt="" />
 
-                </figure>
-                @Html.Raw(Model.Body)
+                    </figure>
+                    @Html.Raw(Model.Body)
 
+                </div>
+                <br />
+
+            </div><!--//container-->
+        </article>
+
+        <article class="blog-post px-3 py-5 p-md-5">
+
+
+            @*Display Comments associated with this BLogPost*@
+            <hr />
+            <div class="row">
+                <div class="col-md-12 text-center h3">
+                    Comments
+                </div>
             </div>
-            <br />
 
-        </div><!--//container-->
-    </article>
+            @*Order comments by descending created date*@
+            @foreach (var comment in Model.Comments.OrderByDescending(c => c.Created))
+            {
 
-</div><!--//main-wrapper-->
+                <div class="row">
+                    <div class="col-md-12">
+                        Comment by @comment.Author.Email on @comment.Created.ToString("MMMM d, yyyy")
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        @comment.Body
+                    </div>
+                </div>
+                <hr />
+
+            }
+
+            @*Rednering thte "add comment" form*@
+            @if (User.Identity.IsAuthenticated)
+            {
+                @*Create a form to collect the Comment from the logged in user*@
+                using (Html.BeginForm("Create", "Comments", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(model => model.Slug)
+                    @Html.Hidden("BlogPostId", Model.Id)
+
+
+                    <textarea name="CommentBody" row="10" cols="100" placeholder="Add Comment..."></textarea>
+                    <br />
+                    <button class="btn btn-primary" type="submit">Click Me</button>
+                }
+            }
+        </article>  
+    </div><!--//main-wrapper-->
