--- a/Austins_Blog/Views/BlogPosts/Details.cshtml
+++ b/Austins_Blog/Views/BlogPosts/Details.cshtml
@@ -11,7 +11,7 @@
             <div class="container">
                 <header class="blog-post-header">
                     <h2 class="title mb-2">@Model.Title</h2>
-                    <div class="meta mb-3"><span class="date">Posted by Austin Pearson on @Model.Created</span>><span class="comment"><a href="#">4 comments</a></span></div>
+                    <div class="meta mb-3"><span class="date">Posted by Austin Pearson on @Model.Created.ToString("MMMM d, yyyy")</span>><span class="comment"><a href="#">4 comments</a></span></div>
                 </header>
 
                 <div class="blog-post-body">
@@ -42,9 +42,8 @@
             @*Order comments by descending created date*@
             @foreach (var comment in Model.Comments.OrderByDescending(c => c.Created))
             {
-
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="meta mb-2">
                         Comment by @comment.Author.Email on @comment.Created.ToString("MMMM d, yyyy")
                     </div>
                 </div>
@@ -53,6 +52,14 @@
                         @comment.Body
                     </div>
                 </div>
+                <ul class="navbar-nav flex-column text-left">
+                    @if (User.IsInRole("Admin") || User.IsInRole("Moderator"))
+                    {
+                        <li class="nav-item">
+                            @Html.ActionLink("Edit Comment", "Index", "Comments", null, new { @class = "nav-link" })
+                        </li>
+                    }
+                </ul>
                 <hr />
 
             }
@@ -70,7 +77,7 @@
 
                     <textarea name="CommentBody" row="10" cols="100" placeholder="Add Comment..."></textarea>
                     <br />
-                    <button class="btn btn-primary" type="submit">Click Me</button>
+                    <button class="btn btn-primary" type="submit">Post Comment</button>
                 }
             }
         </article>  
