--- a/Austins_Blog/Views/Comments/Details.cshtml
+++ b/Austins_Blog/Views/Comments/Details.cshtml
@@ -5,62 +5,63 @@
 }
 
 <h2>Details</h2>
+<div class="main-wrapper">
+    <div>
+        <h4>Comment</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Author.FirstName)
+            </dt>
 
-<div>
-    <h4>Comment</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Author.FirstName)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Author.FirstName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Author.FirstName)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.BlogPost.Title)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BlogPost.Title)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.BlogPost.Title)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.BlogPost.Title)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Body)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Body)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Body)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Body)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Created)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Created)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Created)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Updated)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Updated)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Updated)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Updated)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.UpdateReason)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdateReason)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.UpdateReason)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.UpdateReason)
-        </dd>
-
-    </dl>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
