--- a/Austins_Blog/Views/Home/Index.cshtml
+++ b/Austins_Blog/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                                 <h3 class="title mb-1">
                                     @post.Title
                                 </h3>
-                                <div class="meta mb-1"><span class="date">Posted by Austin Pearson on @post.Created </span><span class="time">5 min read</span><span class="comment"><a href="#">8 comments</a></span></div>
+                                <div class="meta mb-1"><span class="date">Posted by Austin Pearson on @post.Created.ToString("MMMM d, yyyy") </span></div>
                                 <div class="intro">@post.Abstract</div>
 
                                 @*<a class="more-link" href="blog-post.html">Read more &rarr;</a>*@
