--- a/Austins_Blog/Views/BlogPosts/Details.cshtml
+++ b/Austins_Blog/Views/BlogPosts/Details.cshtml
@@ -17,7 +17,7 @@
                 <div class="blog-post-body">
                     <figure class="blog-banner">
 
-                        <img class="img-responsive" src="@Model.MediaUrl" width="790" height="395" alt="" />
+                        <img class="img-responsive" src="@Model.MediaUrl"  height="395" alt="" />
 
                     </figure>
                     @Html.Raw(Model.Body)
