--- a/Austins_Blog/Views/Home/Index.cshtml
+++ b/Austins_Blog/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                 {
                     <a href="@Url.Action("Details","BlogPosts", new { slug = @post.Slug })">
                         <div class="media">
-                            <img class="img-responsive mr-3 img-fluid post-thumb d-none d-md-flex" src="@post.MediaUrl" alt="" />
+                            <img class="img-responsive mr-3 img-fluid post-thumb d-none d-md-flex img-thumbnail" src="@post.MediaUrl" alt="" />
                             <div class="media-body">
                                 <h3 class="title mb-1">
                                     @post.Title
