--- a/Austins_Blog/Views/Shared/_Layout.cshtml
+++ b/Austins_Blog/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Bootstrap 4 Blog Template For Developers</title>
+    <title>Austins Blog</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
@@ -31,7 +31,7 @@
 
 
     <header class="header text-center">
-        <h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">Anthony's Blog</a></h1>
+        <h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">Austins's Blog</a></h1>
 
         <nav class="navbar navbar-expand-lg navbar-dark">
 
@@ -44,9 +44,9 @@
                     <img class="profile-image mb-3 rounded-circle mx-auto" src="~/images/profile.png" alt="image">
                     <div class="bio mb-3">Welcome to my Blog! <br /> Hi, my name is Austin Pearson and I am studying to be a software developer.<br>@Html.ActionLink("Find out more about me", "About", "Home", null, new { @class = "nav-link" })</div><!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
-                        <li class="list-inline-item"><a href="https://twitter.com/AustinCPearson1"><i class="fab fa-twitter fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/austin-pearson-90068818a/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="https://github.com/austinpearson12"><i class="fab fa-github-alt fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a href="https://twitter.com/AustinCPearson1" target="_blank"><i class="fab fa-twitter fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/austin-pearson-90068818a/" target="_blank"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/austinpearson12" target="_blank"><i class="fab fa-github-alt fa-fw"></i></a></li>
                     </ul><!--//social-list-->
                     <hr>
                 </div><!--//profile-section-->
@@ -93,12 +93,7 @@
 
         @RenderBody()
     
-        <footer class="footer text-center py-2 theme-bg-dark">
 
-            <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
-            <small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
-
-        </footer>
 
         <!-- Javascript -->
         <script src="~/Scripts/jquery-3.3.1.min.js"></script>
