--- a/Austins_Blog/Views/Shared/_Layout.cshtml
+++ b/Austins_Blog/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link rel="icon" href="@Url.Content("~/Content/favicon.ico")" />
     <!-- FontAwesome JS-->
     <script defer src="https://use.fontawesome.com/releases/v5.7.1/js/all.js" integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7" crossorigin="anonymous"></script>
-
+    
     <!-- Theme CSS -->
     <link href="~/Content/theme-1.css" rel="stylesheet" />
     <link href="~/Content/PagedList.css" rel="stylesheet" />
@@ -41,7 +41,7 @@
 
             <div id="navigation" class="collapse navbar-collapse flex-column">
                 <div class="profile-section pt-3 pt-lg-0">
-                    <img class="profile-image mb-3 rounded-circle mx-auto" src="~/images/profile.png" alt="image">
+                    <img class="profile-image mb-3 rounded-circle mx-auto" img src="~/images/Austin Pearson.jpg" alt="image">
                     <div class="bio mb-3">Welcome to my Blog! <br /> Hi, my name is Austin Pearson and I am studying to be a software developer.<br>@Html.ActionLink("Find out more about me", "About", "Home", null, new { @class = "nav-link" })</div><!--//bio-->
                     <ul class="social-list list-inline py-3 mx-auto">
                         <li class="list-inline-item"><a href="https://twitter.com/AustinCPearson1" target="_blank"><i class="fab fa-twitter fa-fw"></i></a></li>
